# Rp-Pico

./: CMakeLists.txt
blink/: blink.c
include/: main.h
src/: CMakeLists.txt  main.c
